test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_no_brace.sol
using f as - for uint global;
// ----
// ParserError 2314: (8-10): Expected 'for' but got 'as'
